syntax = "proto3"; // версия proto файлов
package orchestrator; // название пакета
option go_package = "github.com/braginantonev/gcalc-server/proto/orchestrator";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// Expression/Task status
enum ETStatus {
    Analyze = 0;
    Backlog = 1;
    IsWaitingValues = 2;
    InProgress = 3;
    Complete = 4;
}

message Argument {
    double value = 1;
    int32 expected = 2;
}

//Todo: Добавить вместо id, expression_id - TaskID

message TaskID {
    int32 expression = 1;
    int32 internal = 2;
}

message Task {
    TaskID id = 1;
    Argument first_argument = 2;
    Argument second_argument = 3;
    string operation = 4;
    ETStatus status = 5;
    string str = 6;
    double answer = 7;
}

message TaskResult {
    TaskID taskID = 1;
    double result = 2;
    string error = 3;
}

message ExpressionID {
    string user = 1;
    int32 internal = 2;
}

message Expression {
    ExpressionID id = 1;
    ETStatus status = 2;
    string str = 3;
    repeated Task tasks_queue = 4;
    double result = 5;
}

message AddedExpression {
    string user = 1;
    string str = 2;
}

message Expressions {
    repeated Expression queue = 1;
}

service OrchestratorService {
    rpc GetTask (TaskID) returns (Task);    // GetTask()
    rpc SaveTaskResult (TaskResult) returns (google.protobuf.Empty);    // SetExampleResult() - return error
    rpc AddExpression (AddedExpression) returns (google.protobuf.Int32Value); // AddExpression()
    rpc GetExpressions (google.protobuf.StringValue) returns (Expressions);   // GetExpressionsQueue()
    rpc GetExpression (ExpressionID) returns (Expression);    // GetExpression()
}